# ChangeLog for sys-fs/ntfs3g
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/ntfs3g/ChangeLog,v 1.6 2006/07/29 20:25:35 chutzpah Exp $

  29 Jul 2006; Patrick McLean <chutzpah@gentoo.org>
  ntfs3g-0.1_beta20070714.ebuild:
  Reorganize DEPEND and RDEPEND.

  28 Jul 2006; Patrick McLean <chutzpah@gentoo.org>
  ntfs3g-0.1_beta20070714.ebuild:
  Remove a call to ldconfig from the makefile, and some more cleanups.

  27 Jul 2006; Patrick McLean <chutzpah@gentoo.org>
  ntfs3g-0.1_beta20070714.ebuild:
  Minor cleanups (bug #141926).

  22 Jul 2006; Daniel Gryniewicz <dang@gentoo.org>
  ntfs3g-0.1_beta20070714.ebuild:
  Marked ~amd64 per bug #140775

  15 Jul 2006; Patrick McLean <chutzpah@gentoo.org>
  ntfs3g-0.1_beta20070714.ebuild:
  Block against sys-fs/ntfsprogs since they both need to install the same
  headers.

*ntfs3g-0.1_beta20070714 (15 Jul 2006)

  15 Jul 2006; Patrick McLean <chutzpah@gentoo.org> +metadata.xml,
  +ntfs3g-0.1_beta20070714.ebuild:
  Initial version.
