@@ -1,0 +1,3 @@
+MD5 00e8f27da72ed51f6c99ebaef0989297 ntfs-3g-20070714-BETA.tgz 654526
+RMD160 5fb090bb35f8af1b2409ea576b9b441730d60717 ntfs-3g-20070714-BETA.tgz 654526
+SHA256 f55e8cb1637aa6940f745f50940b43c060b52350d1004406b6a141658a23ddf3 ntfs-3g-20070714-BETA.tgz 654526
