@@ -1,6 +1,14 @@
 # ChangeLog for sys-fs/ntfs3g
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/ntfs3g/ChangeLog,v 1.6 2006/07/29 20:25:35 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/ntfs3g/ChangeLog,v 1.7 2006/08/02 14:05:45 chutzpah Exp $
+
+*ntfs3g-0.1_beta20070714-r1 (02 Aug 2006)
+
+  02 Aug 2006; Patrick McLean <chutzpah@gentoo.org>
+  +ntfs3g-0.1_beta20070714-r1.ebuild:
+  New revision, don't install the useless headers since anything that needs
+  them deps in ntfsprogs which has basically the same headers. This allows us
+  to remove the block agains sys-fs/ntfsprogs.
 
   29 Jul 2006; Patrick McLean <chutzpah@gentoo.org>
   ntfs3g-0.1_beta20070714.ebuild:
